Fix alignment of tudelft logo

--- a/themes/chtheme/login/resources/css/styles.css
+++ b/themes/chtheme/login/resources/css/styles.css
@@ -156,3 +156,7 @@ hr {
     .svg-light { display: inline; }
     .svg-dark { display: none; }
 }
+
+.tudelft {
+    margin-right: -20px;
+}
